# jupyterlab-mcp-server

./: .gitignore  MCP_configuration.txt  README.md  jupyterlab_remote_mcp.py  pyproject.toml
